test/zinc_source/compile_errors/callables/13_channel_unbound_instance_method.zn
// expected-error: instance methods must be bound to a receiver before use as callable values
struct Counter {
    count: 0

    fn inc() {
        self.count = self.count + 1
    }
}

fn main() {
    jobs = chan()
    jobs <- Counter.inc
}
